compiler/w_session/tests/errors/if-condition-mismatch.w
fn main(a: u64, b: u32, c: u32): u32 {
    if a {
        b
    } else {
        c
    }
}