compiler/w_session/tests/errors/if-condition-mismatch.stderr
tests/errors/if-condition-mismatch.w:2:8: error: type mismatch
    if a {
       ^
